Дошел до информации

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
         </div>
       </div>
-      <div class="header_main__header_two">
+      <div class="header_main__header_two clearfix">
         <nav class="navigation_main">
           <ul class="navigation_user clearfix">
             <li><a href="#">Home</a></li>
@@ -90,107 +90,101 @@
         </a>
       </div>
     </section>
-    <section class="news">
-      <div class="blok_size clearfix">
-        <div class="news_blok">
-          <img src="img/img40.png" alt="">
-          <a href="#">FOOTBALL SHOES</a>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing,
-            vivamus congue nulla leo, quis imperdiet magna.
-          </p>
-        </div>
-        <div class="news_blok">
-          <img src="img/img41.png" alt="">
-          <a href="#">MODERN CLOTHES</a>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing,
-            vivamus congue nulla leo, quis imperdiet magna.
-          </p>
-        </div>
-        <div class="news_blok">
-          <img src="img/img42.png" alt="">
-          <a href="#">BAGS & ACCESSORIES</a>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing,
-            vivamus congue nulla leo, quis imperdiet magna.
-          </p>
-        </div>
+    <section class="news_main blok_size clearfix">
+      <div class="news_blok3">
+        <img src="img/img40.png" alt="Картинка кросовок">
+        <a href="#">FOOTBALL SHOES</a>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing,
+          vivamus congue nulla leo, quis imperdiet magna.
+        </p>
+      </div>
+      <div class="news_blok3">
+        <img src="img/img41.png" alt="Картинка кросовок">
+        <a href="#">MODERN CLOTHES</a>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing,
+          vivamus congue nulla leo, quis imperdiet magna.
+        </p>
+      </div>
+      <div class="news_blok3">
+        <img src="img/img42.png" alt="Картинка кросовок">
+        <a href="#">BAGS & ACCESSORIES</a>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing,
+          vivamus congue nulla leo, quis imperdiet magna.
+        </p>
       </div>
     </section>
-    <section class="products">
-      <div class="blok_size">
-        <div class="clearfix">
-          <center><h2>POPULAR PRODUCTS</h2></center>
-          <div class="products_blok">
-            <div class="img_container">
-              <img src="img/img50.png" alt="">
-            </div>
-            <div class="products_content">
-              <a href="#"><h2>Nike Tailwind Loose</h2></a>
-              <h3>Running Tank Top</h3>
-              <p>
-                The Nike Tailwind Loose Women's Running Tank
-                Top is made with sweat-wicking fabric to help you
-                stay dry and comfortable on your run.
-              </p>
-              <div class="products_by clearfix">
-                <span class="products_ctoim">$ 36.99</span>
-                <span class="products_icon"><a href="#"><img src="img/plus-icon.png" alt=""></a></span>
-              </div>
-            </div>
+    <section class="products_main blok_size clearfix">
+      <h2>POPULAR PRODUCTS</h2>
+      <div class="products_blok4">
+        <div class="img_container">
+          <img src="img/img50.png" alt="Картинка пингвина">
+        </div>
+        <div class="products_blok4__content">
+          <a href="#"><h2>Nike Tailwind Loose</h2></a>
+          <h3>Running Tank Top</h3>
+          <p>
+            The Nike Tailwind Loose Women's Running Tank
+            Top is made with sweat-wicking fabric to help you
+            stay dry and comfortable on your run.
+          </p>
+          <div class="products_blok4__by clearfix">
+            <span class="by__ctoim">$ 36.99</span>
+            <span class="by__icon"><a href="#"><img src="img/plus-icon.png" alt=""></a></span>
           </div>
-          <div class="products_blok">
-            <div class="img_container">
-              <img src="img/img51.png" alt="">
-            </div>
-            <div class="products_content">
-              <a href="#"><h2>Nike g87</h2></a>
-              <h3>Training Tank Top</h3>
-              <p>
-                The Nike G87 Women's Training Tank Top features
-                soft, sweat-wicking fabric and a regular fit for total
-                comfort during any workout.
-              </p>
-              <div class="products_by clearfix">
-                <span class="products_ctoim">$ 36.99</span>
-                <span class="products_icon"><a href="#"><img src="img/plus-icon.png" alt=""></a></span>
-              </div>
-            </div>
+        </div>
+      </div>
+      <div class="products_blok4">
+        <div class="img_container">
+          <img src="img/img51.png" alt="Картинка пингвина">
+        </div>
+        <div class="products_blok4__content">
+          <a href="#"><h2>Nike g87</h2></a>
+          <h3>Training Tank Top</h3>
+          <p>
+            The Nike G87 Women's Training Tank Top features
+            soft, sweat-wicking fabric and a regular fit for total
+            comfort during any workout.
+          </p>
+          <div class="products_blok4__by clearfix">
+            <span class="by__ctoim">$ 36.99</span>
+            <span class="by__icon"><a href="#"><img src="img/plus-icon.png" alt=""></a></span>
           </div>
-          <div class="products_blok">
-            <div class="img_container">
-              <img src="img/img52.png" alt="">
-            </div>
-            <div class="products_content">
-              <a href="#"><h2>Nike I-Beam Swoosh</h2></a>
-              <h3>Sports Top</h3>
-              <p>
-                The Nike I-Beam Swoosh Women's Sports Top
-                features a built-in bra and mesh back panel for
-                lightweight support and targeted breathability.
-              </p>
-              <div class="products_by clearfix">
-                <span class="products_ctoim">$ 36.99</span>
-                <span class="products_icon"><a href="#"><img src="img/plus-icon.png" alt=""></a></span>
-              </div>
-            </div>
+        </div>
+      </div>
+      <div class="products_blok4">
+        <div class="img_container">
+          <img src="img/img52.png" alt="Картинка пингвина">
+        </div>
+        <div class="products_blok4__content">
+          <a href="#"><h2>Nike I-Beam Swoosh</h2></a>
+          <h3>Sports Top</h3>
+          <p>
+            The Nike I-Beam Swoosh Women's Sports Top
+            features a built-in bra and mesh back panel for
+            lightweight support and targeted breathability.
+          </p>
+          <div class="products_blok4__by clearfix">
+            <span class="by__ctoim">$ 36.99</span>
+            <span class="by__icon"><a href="#"><img src="img/plus-icon.png" alt=""></a></span>
           </div>
-          <div class="products_blok">
-            <div class="img_container">
-              <img src="img/img53.png" alt="">
-            </div>
-            <div class="products_content">
-              <a href="#"><h2>Nike lux</h2></a>
-              <h3>Running Top</h3>
-              <p>
-                The Nike Tailwind Loose Women's Running Tank Top is made with sweat-wicking fabric to help you stay dry and comfortable on your run.
-              </p>
-              <div class="products_by clearfix">
-                <span class="products_ctoim">$ 36.99</span>
-                <span class="products_icon"><a href="#"><img src="img/plus-icon.png" alt=""></a></span>
-              </div>
-            </div>
+        </div>
+      </div>
+      <div class="products_blok4">
+        <div class="img_container">
+          <img src="img/img53.png" alt="Картинка пингвина">
+        </div>
+        <div class="products_blok4__content">
+          <a href="#"><h2>Nike lux</h2></a>
+          <h3>Running Top</h3>
+          <p>
+            The Nike Tailwind Loose Women's Running Tank Top is made with sweat-wicking fabric to help you stay dry and comfortable on your run.
+          </p>
+          <div class="products_blok4__by clearfix">
+            <span class="by__ctoim">$ 36.99</span>
+            <span class="by__icon"><a href="#"><img src="img/plus-icon.png" alt=""></a></span>
           </div>
         </div>
       </div>
